hphp/hack/test/typecheck/interface_memoize.php
<?hh // partial
interface I {
  <<__Memoize>>
  public function foo(): void;

}
